--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.22.0",
     "@tanstack/react-query": "^5.61.5",
     "@tanstack/react-query-devtools": "^5.61.5",
     "axios": "^1.7.8",
     "next": "15.0.3",
+    "next-auth": "^4.24.10",
     "prisma": "^5.22.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
